# ikarus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml  publish.yml  tests.yml
core/: __init__.py  layer.py  rcwa.py  source.py
docs/: advanced.md  citation.md  core-concepts.md  developer-guide.md  examples-gallery.md  faq.md  index.md  installation.md  license.md  llms.md  performance.md  quickstart.md  theory.md  troubleshooting.md
docs/api/: fields-viz.md  index.md  inverse.md  low-level.md  materials-layers.md  rcwa.md  shapes.md  source.md  sweeps.md  tools.md
docs/dev/: adjoint_benchmarks.py  adjoint_phase0_spike.py  gradient_optimization_proposal.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/tutorials/: angular-response.md  gratings.md  index.md  inverse-design.md  metasurfaces.md  parameter-sweeps.md  polarization.md  reflection-transmission.md  structures.md
examples/: grating_diffraction.py  metasurface_spectrum.py
ikarus/: AI_GUIDE.md  __init__.py  _progress.py  sweep.py
ikarus/core/: __init__.py  _normalvector.py  fields.py  fourier.py  layer.py  materials.py  polarization.py  rcwa.py  solver.py
ikarus/examples/: __init__.py  feature_tour.py  inverse_metamirror.py  save_load.py  validation_fresnel.py
ikarus/grad/: __init__.py  _eig.py  _solver.py  topology.py
ikarus/inverse/: __init__.py  adjoint.py  dof.py  optimize.py  structure.py  targets.py
ikarus/materials/: Ag.json  Au.json  GaN.json  GaP.json  Si3N4.json  SiO2.json
ikarus/shapes/: __init__.py  parametric.py  primitives.py
ikarus/tests/: test_adjoint.py  test_anisotropy.py  test_convergence_check.py  test_factorization.py  test_fourier.py  test_grad.py  test_inverse.py  test_normalvector.py  test_shapes.py  test_structure.py  test_sweep.py
ikarus/tests/validation/: test_fresnel.py  test_grating.py
ikarus/tools/: convergence.py
ikarus/visualization/: __init__.py  fields.py
materials/: Air.json  Si.json  TiO2.json  aSi.json
overrides/: main.html
scripts/: gen_docs_figures.py
tests/: test_features.py  test_materials.py  test_shapes.py
tests/validation/: fresnel_reference.py  te1d_reference.py
tools/: __init__.py  add_material.py  io.py
visualization/: structure.py
