[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ikarus-rcwa"
version = "0.7.0"
description = "High-precision 2D RCWA simulation for periodic photonic structures"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Liam Shelling Neto", email = "liam.shelling-neto@cavity-technologies.com" }]
keywords = ["rcwa", "photonics", "metasurface", "grating", "electromagnetics", "diffraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4"]
io = ["h5py>=3.0"]
inverse = ["pymoo>=0.6"]
progress = ["tqdm>=4"]
all = ["matplotlib>=3.4", "h5py>=3.0", "pymoo>=0.6", "tqdm>=4"]
dev = ["pytest>=7.0", "matplotlib>=3.4", "h5py>=3.0", "pymoo>=0.6", "tqdm>=4"]

[project.urls]
Homepage = "https://github.com/CAVITYtechnologies/ikarus"
Repository = "https://github.com/CAVITYtechnologies/ikarus"
Issues = "https://github.com/CAVITYtechnologies/ikarus/issues"

[project.scripts]
ikarus-add-material = "ikarus.tools.add_material:main"

[tool.setuptools.packages.find]
include = ["ikarus*"]

[tool.setuptools.package-data]
"ikarus.materials" = ["*.json"]
"ikarus" = ["AI_GUIDE.md"]

[tool.pytest.ini_options]
testpaths = ["ikarus/tests"]
